--- a/ClientApp/src/app/component/side-nav/side-nav.component.html
+++ b/ClientApp/src/app/component/side-nav/side-nav.component.html
@@ -1,11 +1,11 @@
-<div class="admin-container">
+<div class="sidenav-container">
   <mat-drawer-container>
     <mat-drawer mode="side" opened class="sidebar-container">
       <aside class="sidebar">
         <a href="samp://S1.DIXEL-RP.COM:7777" class="logo-dixel">
           <img src="https://imgur.com/YHL61AI.png" class="imagen" alt="S1.DIXEL-RP.COM" title="©DixelRP">
         </a>
-        <h1 class="slider-title"> Facciones </h1>
+        <h1 class="sidenav-title"> Facciones </h1>
         <nav class="sidebar-nav">
           <ul class="sidebar-list">
             <li>
