--- a/ClientApp/src/assets/styles/my-theme.scss
+++ b/ClientApp/src/assets/styles/my-theme.scss
@@ -34,7 +34,16 @@ $my-primary-color: (
 );
 @use '@angular/material' as mat;
 
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 //definir paletas de colores
 $primary: mat.define-palette($my-primary-color, 400);
@@ -52,4 +61,4 @@ $theme: mat.define-light-theme((
 ));
 
 // Incluyendo el tema en los componentes de material
-@include mat.all-component-themes($theme);
+@include mat.all-legacy-component-themes($theme);
