--- a/ClientApp/src/app/pages/admin/users/users.component.html
+++ b/ClientApp/src/app/pages/admin/users/users.component.html
@@ -1,38 +1,63 @@
-<div>
-  <button mat-raised-button (click)="openCreateModal()"> Crear nuevo usuario </button>
+<div class="w-11/12 overflow-auto mx-auto my-2">
+  <button class="btn btn-rose my-2" (click)="openCreateModal()" type="button">
+    Crear nuevo usuario
+  </button>
   <div class="user-table">
-    <table mat-table [dataSource]="dataTableUsuarios" class="mat-elevation-z8" style="margin: 1rem auto">
+    <table mat-table [dataSource]="dataTableUsuarios" class="">
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element">
+          <div style="display: flex;">
+            <button type="button" (click)="editUser(element)">
+              <mat-icon>edit</mat-icon>
+
+            </button>
+            <button type="button" (click)="sendCredentials(element)">
+              <mat-icon>send</mat-icon>
+
+            </button>
+            <button type="button" (click)="deleteUser(element)">
+              <mat-icon color="warn">delete</mat-icon>
+
+            </button>
+          </div>
+        </td>
+      </ng-container>
       <ng-container matColumnDef="discord">
-        <th mat-header-cell *matHeaderCellDef> discord </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.discord}} </td>
+        <th mat-header-cell *matHeaderCellDef> Discord </th>
+        <td mat-cell *matCellDef="let element"> {{element.discord}} </td>
       </ng-container>
+
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> nombre </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.name}} </td>
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
+
       <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> email </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.email}} </td>
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
       </ng-container>
+
       <ng-container matColumnDef="password">
-        <th mat-header-cell *matHeaderCellDef> password </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.password}} </td>
+        <th mat-header-cell *matHeaderCellDef> Password </th>
+        <td mat-cell *matCellDef="let element"> {{element.password}} </td>
       </ng-container>
       <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef> estado </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.state}} </td>
+        <th mat-header-cell *matHeaderCellDef> State </th>
+        <td mat-cell *matCellDef="let element"> {{element.state}} </td>
       </ng-container>
       <ng-container matColumnDef="token">
-        <th mat-header-cell *matHeaderCellDef> sesion </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.token}} </td>
+        <th mat-header-cell *matHeaderCellDef> Token </th>
+        <td mat-cell *matCellDef="let element"> {{element.token}} </td>
       </ng-container>
       <ng-container matColumnDef="age">
-        <th mat-header-cell *matHeaderCellDef> edad </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.age}} </td>
+        <th mat-header-cell *matHeaderCellDef> Age </th>
+        <td mat-cell *matCellDef="let element"> {{element.age}} </td>
       </ng-container>
       <ng-container matColumnDef="observations">
-        <th mat-header-cell *matHeaderCellDef> observaciones </th>
-        <td mat-cell *matCellDef="let element" style="padding: 1rem;"> {{element.observations}} </td>
+        <th mat-header-cell *matHeaderCellDef> Observations </th>
+        <td mat-cell *matCellDef="let element"> {{element.observations}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumnsUsuarios"></tr>
