--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,5 +1,8 @@
-@import 'assets/styles/my-theme.scss';
 @import 'assets/styles/accordion-sidenav.scss';
+@import 'assets/styles/buttons.scss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html, body { height: 100%; }
 .main-container{
     overflow: hidden;
